--- a/posawesome/posawesome/page/posapp/posapp.json
+++ b/posawesome/posawesome/page/posapp/posapp.json
@@ -4,7 +4,7 @@
  "docstatus": 0,
  "doctype": "Page",
  "idx": 0,
- "modified": "2020-09-23 14:53:30.009891",
+ "modified": "2021-02-21 18:27:26.045993",
  "modified_by": "Administrator",
  "module": "POSAwesome",
  "name": "posapp",
@@ -31,5 +31,5 @@
  "standard": "Yes",
  "style": null,
  "system_page": 0,
- "title": "POS Awesome"
+ "title": "AviERP POS"
 }
